@@ -1,5 +1,10 @@
-20140808
-=========
+CURRENT
+-------
+- #24247 - Add STOP capabilites to the HDFSFileWrapper.
+- #24285 - WebHDFSFileWrapper should handle key/value as HDFSDelimitedTextFileWrapper
 
+
+20140808
+--------
 - #15683 - Add authentication artifacts for kerberized Hadoop clusters.
 - #15709 - Update version of Hadoop client libraries (v2.4.0)
